# gtk4_list_characters

./: README.md  meson.build
data/resources/: github.aeldemery.gtk4_list_characters.gresource.xml  meson.build  stack.ui
resources/: github.aeldemery.gtk4_list_characters.gresource.xml  meson.build
resources/layouts/: dialog.ui
resources/styles/: style.css
source/: CharactersView.vala  DisplayDialog.vala  Main.vala  MainWindow.vala  UnicodeItem.vala  UnicodeItemsModel.vala  meson.build
